--- a/static/index.css
+++ b/static/index.css
@@ -14,6 +14,15 @@ body {
   transform: translateX(-50%);
 }
 
+#players {
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  width: min(100vw, 798px);
+  display: flex;
+  justify-content: space-between;
+}
+
 #setup {
   position: relative;
   left: 50%;
@@ -38,4 +47,10 @@ body {
 .break {
   flex-basis: 100%;
   height: 0;
+}
+
+.current_player {
+  background-color: black;
+  color: white;
+  padding: 0.25rem 1rem 0.25rem 1rem;
 }
