--- a/static/index.css
+++ b/static/index.css
@@ -1,17 +1,49 @@
 body {
+  background: linear-gradient(-60deg, #e9724c, #481d24);
+  height: 100vh;
   width: 100vw;
   margin: 0;
   padding: 0;
-  padding-top: 10px;
+  top: 0;
+  color: white;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+nav {
+  display: flex;
+  background: rgba(0, 0, 0, 0.2);
+  height: max-content;
+  text-align: center;
+  justify-content: center;
+  margin-bottom: 10px;
+  color: white;
+}
+
+input {
+  background: rgba(0, 0, 0, 0.2);
+  border: 0px;
+  border-radius: 0;
+  padding: 5px;
+  margin-bottom: 10px;
+  text-align: center;
+  color: white;
+}
+
+input:focus {
+  outline: none;
 }
 
 #board {
   position: relative;
   display: flex;
   flex-wrap: wrap;
-  width: min(100vw, 798px);
-  left: 50%;
+  width: min(80vw, 798px);
+  left: 49.4%;
   transform: translateX(-50%);
+  padding: 10px;
+  background: rgba(0, 0, 0, 0.2);
+  border-radius: min(5vw, 15px);
 }
 
 #players {
@@ -30,11 +62,19 @@ body {
   width: max-content;
 }
 
+#serverSetup {
+  background: rgba(0, 0, 0, 0.2);
+  padding: 2rem;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+}
+
 .hole {
-  height: min(11vw, 100px);
-  width: min(11vw, 100px);
+  height: min(8.1vw, 100px);
+  width: min(8.1vw, 100px);
   margin: min(1vw, 5px);
-  border: 2px solid black;
+  border: 2px solid white;
   border-radius: 50ch;
   transition: border-radius 0.1s ease;
 }
