--- a/static/index.css
+++ b/static/index.css
@@ -36,9 +36,9 @@ input:focus {
 
 #board {
   position: relative;
-  display: flex;
-  flex-wrap: wrap;
-  width: min(80vw, 798px);
+  display: grid;
+  grid-template-columns: repeat(7, min(11vw, 100px));
+  width: max-content;
   left: 49.4%;
   transform: translateX(-50%);
   padding: 10px;
@@ -68,6 +68,19 @@ input:focus {
   border-radius: 5px;
   display: flex;
   flex-direction: column;
+}
+
+#won {
+  position: absolute;
+  top: 150px;
+  padding: 10px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 5px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: max-content;
+  font-size: min(8.1vw, 100px);
+  z-index: 999;
 }
 
 .hole {
