--- a/static/index.css
+++ b/static/index.css
@@ -70,6 +70,43 @@ input:focus {
   flex-direction: column;
 }
 
+#serverList {
+  background: rgba(0, 0, 0, 0.2);
+  padding: 2rem;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  margin-top: 3rem;
+}
+
+.server-title {
+  text-align: center;
+  margin-top: 0;
+}
+
+.server-username {
+  font-size: 1.5rem;
+}
+
+.server {
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  background: rgba(0, 0, 0, 0.2);
+  padding: 1rem;
+  border-radius: 5px;
+  margin-bottom: 5px;
+  margin-top: 5px;
+}
+
+.serverP {
+  margin: 3px;
+}
+
+.server-button {
+  grid-row: 1/3;
+  grid-column: 2;
+}
+
 #won {
   position: absolute;
   top: 150px;
