--- a/static/index.css
+++ b/static/index.css
@@ -76,7 +76,32 @@ input:focus {
   border-radius: 5px;
   display: flex;
   flex-direction: column;
-  margin-top: 3rem;
+}
+
+#usernameInput {
+  background: rgba(0, 0, 0, 0.2);
+  padding: 2rem;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+}
+
+.images {
+  height: 1.8rem;
+  margin-left: 1rem;
+  filter: invert(1);
+}
+
+#createServer {
+  display: flex;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  padding: 0 2rem 0 2rem;
+}
+
+#createServer:hover {
+  cursor: pointer;
 }
 
 .server-title {
