--- a/static/index.css
+++ b/static/index.css
@@ -86,12 +86,6 @@ input:focus {
   flex-direction: column;
 }
 
-.images {
-  height: 1.8rem;
-  margin-left: 1rem;
-  filter: invert(1);
-}
-
 #createServer {
   display: flex;
   text-align: center;
@@ -129,15 +123,6 @@ input:focus {
   margin-top: 5px;
 }
 
-.serverP {
-  margin: 3px;
-}
-
-.server-button {
-  grid-row: 1/3;
-  grid-column: 2;
-}
-
 #won {
   position: absolute;
   top: 150px;
@@ -170,8 +155,23 @@ input:focus {
   height: 0;
 }
 
-.current_player {
+.current-player {
   background-color: black;
   color: white;
   padding: 0.25rem 1rem 0.25rem 1rem;
+}
+
+.images {
+  height: 1.8rem;
+  margin-left: 1rem;
+  filter: invert(1);
+}
+
+.server-p {
+  margin: 3px;
+}
+
+.server-button {
+  grid-row: 1/3;
+  grid-column: 2;
 }
