--- a/static/index.css
+++ b/static/index.css
@@ -1,5 +1,6 @@
 body {
-  background: linear-gradient(-60deg, #e9724c, #481d24);
+  background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+  /* background: linear-gradient(-60deg, #e9724c, #481d24); */
   height: 100vh;
   width: 100vw;
   margin: 0;
@@ -28,6 +29,10 @@ input {
   margin-bottom: 10px;
   text-align: center;
   color: white;
+}
+
+input::placeholder {
+  color: rgba(220, 220, 220);
 }
 
 input:focus {
