--- a/static/index.css
+++ b/static/index.css
@@ -1,5 +1,5 @@
 body {
-  background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+  background-image: linear-gradient(to right, #9795f0 0%, #fbc8d4 100%);
   /* background: linear-gradient(-60deg, #e9724c, #481d24); */
   height: 100vh;
   width: 100vw;
