--- a/static/index.css
+++ b/static/index.css
@@ -20,6 +20,11 @@ nav {
   color: white;
 }
 
+a {
+  color: white;
+  text-decoration: none;
+}
+
 input[type="text"] {
   background: rgba(0, 0, 0, 0.2);
   border: 0px;
@@ -44,19 +49,20 @@ input:focus {
 }
 
 button {
-  background: rgba(255, 255, 255, 0.8);
-  border: 0px;
+  background: rgba(0, 0, 0, 0);
+  border: 1px solid white;
   border-radius: 5px;
   padding: 15px;
   margin-bottom: 10px;
-  color: black;
+  color: white;
   font-size: 1rem;
   transition: background-color 0.5s ease;
+  height: 100%;
 }
 
 button:hover {
   cursor: pointer;
-  background: rgba(255, 255, 255, 0.6);
+  background: rgba(255, 255, 255, 0.1);
 }
 
 #board {
@@ -111,23 +117,33 @@ button:hover {
   flex-direction: column;
 }
 
+#timerLabel {
+  text-align: center;
+}
+
 #createServer {
   display: flex;
   text-align: center;
   align-items: center;
   justify-content: center;
-  padding: 0;
+  padding: 0 2rem;
   width: max(10rem, 20vw);
+  background: rgba(0, 0, 0, 0);
+  border: 1px solid white;
+  border-radius: 5px;
+  transition: background-color 0.5s ease;
+  margin-bottom: 10px;
+}
+
+#createServer:hover {
+  cursor: pointer;
+  background-color: rgba(255, 255, 255, 0.1);
 }
 
 #counter {
   position: absolute;
   width: 100%;
   text-align: center;
-}
-
-#createServer:hover {
-  cursor: pointer;
 }
 
 .server-title {
@@ -142,7 +158,7 @@ button:hover {
 
 .server {
   display: grid;
-  grid-template-columns: 66% 33%;
+  grid-template-columns: 60% 40%;
   grid-template-rows: 2rem 2rem;
   background: rgba(0, 0, 0, 0.2);
   padding: 1rem;
@@ -200,6 +216,9 @@ button:hover {
 }
 
 .server-button {
+  position: relative;
   grid-row: 1/4;
   grid-column: 2;
+  width: max(75px);
+  margin-right: 0;
 }
