--- a/static/index.css
+++ b/static/index.css
@@ -84,6 +84,7 @@ button:hover {
   width: min(90vw, 750px);
   display: flex;
   justify-content: space-between;
+  font-size: 2rem;
 }
 
 #setup {
@@ -202,7 +203,8 @@ button:hover {
 .current-player {
   background-color: black;
   color: white;
-  padding: 0.25rem 1rem 0.25rem 1rem;
+  padding: 0.25rem 1rem 0.5rem 1.25rem;
+  border-radius: 5px;
 }
 
 .images {
